# Nowlensai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: prometheus.yml
config/grafana/provisioning/dashboards/: dashboards.yml  nowlens-overview.json
data/sample/: sample_page.html  seed_urls.txt
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DOMAIN_PACKS.md  INGESTION.md  SECURITY.md
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/components/: AnswerCard.tsx  AppShell.tsx  AuthGate.tsx  LensMark.tsx
frontend/src/lib/: api.ts  auth.tsx  types.ts
k8s/: README.md  api-deployment.yaml  api-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  migrate-job.yaml  namespace.yaml  secret.example.yaml
scripts/: bootstrap.sh  seed_demo.py
src/nowlens/: __init__.py  cli.py  services.py
src/nowlens/agents/: __init__.py  base.py  best_practices.py  business_analysis.py  detect.py  feature_overlap.py  graph.py  ingestion.py  knowledge.py  marketplace.py  prompts.py  quality_assurance.py  research.py  state.py
src/nowlens/api/: __init__.py  app.py  cookies.py  deps.py  middleware.py
src/nowlens/api/routers/: __init__.py  auth.py  chat.py  config.py  domains.py  health.py  ingestion.py  metrics.py  sessions.py  tenants.py
src/nowlens/api/schemas/: __init__.py  auth.py  chat.py  common.py  ingestion.py  tenant.py
src/nowlens/core/: __init__.py  config.py  domains.py  exceptions.py  logging.py  tracing.py
src/nowlens/db/: __init__.py  base.py  models.py  repositories.py  session.py
src/nowlens/db/migrations/: env.py
src/nowlens/db/migrations/versions/: 0001_initial.py  0002_messages_session_created_idx.py  0003_multi_tenancy.py
src/nowlens/domain_packs/: __init__.py  base.py  registry.py
src/nowlens/domain_packs/jira/: __init__.py  domains.py  pack.py
src/nowlens/domain_packs/salesforce/: __init__.py  domains.py  pack.py
src/nowlens/domain_packs/servicenow/: __init__.py  domains.py  pack.py
src/nowlens/ingestion/: __init__.py  models.py  pipeline.py
src/nowlens/ingestion/stages/: __init__.py  chunk.py  clean.py  crawl.py  dedup.py  embed.py  enrich.py  extract.py  index.py  normalize.py  render.py  validate.py
src/nowlens/llm/: __init__.py  base.py  factory.py  groq.py  ollama.py  openai_embeddings.py
src/nowlens/observability/: __init__.py  langfuse.py  metrics.py
src/nowlens/rag/: __init__.py  base.py  citations.py  compression.py  fusion.py  lexical.py  reranker.py  retriever.py  types.py  vector_store.py
src/nowlens/security/: __init__.py  audit.py  jwt.py  password.py  prompt_injection.py  rate_limit.py  rbac.py  sanitize.py
src/nowlens/workers/: __init__.py  arq_worker.py  tasks.py
tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_api_db.py  test_cookie_auth.py  test_detection.py  test_domain_packs.py  test_domains_and_config.py  test_embeddings.py  test_ingestion_stages.py  test_jira_pack.py  test_pipeline.py  test_rag.py  test_salesforce_pack.py  test_security.py  test_tenancy.py
