[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nowlens-ai"
version = "0.1.0"
description = "Multi-agent AI platform for ServiceNow expert guidance (Hybrid RAG + agentic workflows)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "NowLens AI Contributors" }]
keywords = ["servicenow", "rag", "langgraph", "agents", "fastapi", "qdrant"]

dependencies = [
  # ---- Web / API ----
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-multipart>=0.0.9",
  "sse-starlette>=2.1",
  # ---- Persistence ----
  "sqlalchemy[asyncio]>=2.0.30",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "redis>=5.0",
  # ---- Vector / RAG ----
  "qdrant-client>=1.9",
  "rank-bm25>=0.2.2",
  "numpy>=1.26",
  # ---- Orchestration ----
  "langgraph>=0.1.5",
  "langchain-core>=0.2.0",
  "langchain-text-splitters>=0.2.0",
  # ---- LLM / HTTP ----
  "httpx>=0.27",
  "tenacity>=8.3",
  # ---- Ingestion ----
  "selectolax>=0.3.21",
  "beautifulsoup4>=4.12",
  # ---- Security ----
  "pyjwt>=2.8",
  "passlib[bcrypt]>=1.7.4",
  # passlib 1.7.4 (latest) reads bcrypt.__about__, removed in bcrypt 4.1+, so
  # pin to the 4.0.x line until passlib ships a release that supports newer bcrypt.
  "bcrypt>=4.0,<4.1",
  "nh3>=0.2.17",
  "email-validator>=2.1",
  # ---- Observability ----
  "structlog>=24.1",
  "prometheus-client>=0.20",
]

[project.optional-dependencies]
# Heavier / optional capabilities kept out of the default install path.
rerank = ["sentence-transformers>=3.0"]
render = ["playwright>=1.44"]
langfuse = ["langfuse>=2.36"]
worker = ["arq>=0.26"]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  # In-process async SQLite backs the DB integration tests (see tests/conftest.py).
  "aiosqlite>=0.20",
  "ruff>=0.4.8",
  "black>=24.4",
  "mypy>=1.10",
  "types-passlib>=1.7",
  "pre-commit>=3.7",
  "playwright>=1.44",
]

[project.scripts]
nowlens = "nowlens.cli:main"

# First-party Domain Pack, discovered via the same entry-point mechanism as any
# third-party pack — the core never imports it by name.
[project.entry-points."nowlens.domain_packs"]
servicenow = "nowlens.domain_packs.servicenow.pack:ServiceNowPack"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nowlens = ["py.typed"]

# ----------------------------------------------------------------------------
# Ruff
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "BLE", "C4", "SIM", "PTH", "RUF", "ASYNC"]
ignore = [
  "B008",  # function calls in defaults (FastAPI Depends pattern)
  "RUF012", # mutable class attrs without ClassVar (pydantic models)
]

[tool.ruff.lint.isort]
known-first-party = ["nowlens"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

# ----------------------------------------------------------------------------
# Black
# ----------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py311"]

# ----------------------------------------------------------------------------
# mypy
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
  "qdrant_client.*",
  "rank_bm25.*",
  "selectolax.*",
  "langgraph.*",
  "langchain_core.*",
  "langchain_text_splitters.*",
  "sentence_transformers.*",
  "langfuse.*",
  "arq.*",
  "alembic.*",
  "redis.*",
  "uvicorn.*",
  "playwright.*"
]
ignore_missing_imports = true

# numpy (a transitive dep) ships PEP 695 `type` statements in its stubs, which
# mypy rejects as a syntax error when targeting python_version < 3.12. We never
# use numpy directly, so skip following it entirely rather than parse its stubs
# (ignore_missing_imports alone does not prevent parsing an installed package).
[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"
follow_imports_for_stubs = true
ignore_missing_imports = true

# ----------------------------------------------------------------------------
# pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
pythonpath = ["src", "."]
filterwarnings = ["ignore::DeprecationWarning"]
